# purekell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.yaml  purekell.cabal  stack.yaml
.github/workflows/: ci.yml
src/: Purekell.hs
src/Purekell/: AST.hs  Codec.hs  Haskell.hs  Instance.hs  Parser.hs  Printer.hs  PureScript.hs
test/Purekell/: ASTSpec.hs  Arbitrary.hs  DivergentSpec.hs  InstanceSpec.hs  RoundtripSpec.hs
